@@ -1,130 +1,183 @@
 package no.nav.dolly.service.excel;
 
 import lombok.RequiredArgsConstructor;
+import no.nav.dolly.bestilling.kontoregisterservice.KontoregisterConsumer;
 import no.nav.dolly.bestilling.tpsmessagingservice.TpsMessagingConsumer;
-import no.nav.dolly.consumer.kodeverk.KodeverkConsumer;
 import no.nav.dolly.domain.jpa.Bestilling;
 import no.nav.dolly.domain.jpa.BestillingProgress;
 import no.nav.dolly.domain.jpa.Testgruppe;
-import no.nav.dolly.domain.jpa.Testident;
 import no.nav.dolly.repository.IdentRepository;
-import no.nav.testnav.libs.dto.tpsmessagingservice.v1.BankkontonrNorskDTO;
-import no.nav.testnav.libs.dto.tpsmessagingservice.v1.BankkontonrUtlandDTO;
+import no.nav.testnav.libs.dto.kontoregisterservice.v1.BankkontonrNorskDTO;
+import no.nav.testnav.libs.dto.kontoregisterservice.v1.BankkontonrUtlandDTO;
+import no.nav.testnav.libs.dto.kontoregisterservice.v1.KontoDTO;
 import no.nav.testnav.libs.dto.tpsmessagingservice.v1.PersonDTO;
 import no.nav.testnav.libs.dto.tpsmessagingservice.v1.PersonMiljoeDTO;
 import org.apache.poi.ss.usermodel.IgnoredErrorType;
 import org.apache.poi.ss.util.CellRangeAddress;
-import org.apache.poi.xssf.usermodel.XSSFCellStyle;
 import org.apache.poi.xssf.usermodel.XSSFWorkbook;
 import org.springframework.stereotype.Service;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
-import reactor.util.function.Tuple2;
 
+import java.time.LocalDateTime;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
-import java.util.Map;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.atomic.AtomicInteger;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
+import static java.util.Objects.isNull;
 import static java.util.Objects.nonNull;
+import static no.nav.dolly.service.excel.ExcelUtil.*;
+import static org.apache.commons.lang3.StringUtils.isNotBlank;
 
 @Service
 @RequiredArgsConstructor
 public class BankkontoExcelService {
 
-    private static final Object[] header = {"Ident", "Kontonummer (Norge)", "Kontonummer (Utland)", "Banknavn", "Bankkode",
-            "Banklandkode", "Valutakode", "Swift/Bickode", "Bankadresse1", "Bankadresse2", "Bankadresse3"};
-    private static final Integer[] COL_WIDTHS = {14, 20, 20, 20, 20, 20, 20, 20, 30, 30, 30};
-    private static final String ARK_FANE = "Bankkontoer";
-    private static final String LANDKODER = "Landkoder";
-    private static final String VALUTAER = "Valutaer";
-    private static final String KODEVERK_FMT = "%s (%s)";
-
-    private final IdentRepository identRepository;
+    private static final LocalDateTime NYTT_KONTOREGISTER_FRA_DATO = LocalDateTime.of(2022, 8, 30, 0, 0);
     private final TpsMessagingConsumer tpsMessagingConsumer;
-    private final KodeverkConsumer kodeverkConsumer;
+    private final KontoregisterConsumer kontoregisterConsumer;
+
+    private static String getAdresse1(KontoDTO konto) {
+
+        return nonNull(konto) && nonNull(konto.getUtenlandskKontoInfo()) && isNotBlank(konto.getUtenlandskKontoInfo().getBankadresse1()) ?
+                konto.getUtenlandskKontoInfo().getBankadresse1() : "";
+    }
 
     private static String getAdresse1(BankkontonrUtlandDTO bankkontonrUtland) {
 
-        return nonNull(bankkontonrUtland) && nonNull(bankkontonrUtland.getBankAdresse1()) ?
-                bankkontonrUtland.getBankAdresse1() : "";
+        return nonNull(bankkontonrUtland) && isNotBlank(bankkontonrUtland.getBankAdresse1()) ?
+                bankkontonrUtland.getBankAdresse1().trim() : "";
+    }
+
+    private static String getAdresse2(KontoDTO konto) {
+
+        return nonNull(konto) && nonNull(konto.getUtenlandskKontoInfo()) && isNotBlank(konto.getUtenlandskKontoInfo().getBankadresse2()) ?
+                konto.getUtenlandskKontoInfo().getBankadresse2() : "";
     }
 
     private static String getAdresse2(BankkontonrUtlandDTO bankkontonrUtland) {
 
-        return nonNull(bankkontonrUtland) && nonNull(bankkontonrUtland.getBankAdresse2()) ?
-                bankkontonrUtland.getBankAdresse2() : "";
+        return nonNull(bankkontonrUtland) && isNotBlank(bankkontonrUtland.getBankAdresse2()) ?
+                bankkontonrUtland.getBankAdresse2().trim() : "";
+    }
+
+    private static String getAdresse3(KontoDTO konto) {
+
+        return nonNull(konto) && nonNull(konto.getUtenlandskKontoInfo()) && isNotBlank(konto.getUtenlandskKontoInfo().getBankadresse3()) ?
+                konto.getUtenlandskKontoInfo().getBankadresse3() : "";
     }
 
     private static String getAdresse3(BankkontonrUtlandDTO bankkontonrUtland) {
 
-        return nonNull(bankkontonrUtland) && nonNull(bankkontonrUtland.getBankAdresse3()) ?
-                bankkontonrUtland.getBankAdresse3() : "";
+        return nonNull(bankkontonrUtland) && isNotBlank(bankkontonrUtland.getBankAdresse3()) ?
+                bankkontonrUtland.getBankAdresse3().trim() : "";
+    }
+
+    private static String getSwift(KontoDTO konto) {
+
+        return nonNull(konto) && nonNull(konto.getUtenlandskKontoInfo()) && isNotBlank(konto.getUtenlandskKontoInfo().getSwiftBicKode()) ?
+                konto.getUtenlandskKontoInfo().getSwiftBicKode() : "";
     }
 
     private static String getSwift(BankkontonrUtlandDTO bankkontonrUtland) {
 
-        return nonNull(bankkontonrUtland) && nonNull(bankkontonrUtland.getSwift()) ?
-                bankkontonrUtland.getSwift() : "";
+        return nonNull(bankkontonrUtland) && isNotBlank(bankkontonrUtland.getSwift()) ?
+                bankkontonrUtland.getSwift().trim() : "";
+    }
+
+    private static String getIban(KontoDTO konto) {
+
+        return nonNull(konto) && nonNull(konto.getUtenlandskKontoInfo()) && isNotBlank(konto.getKontonummer()) ?
+                konto.getKontonummer() : "";
     }
 
     private static String getIban(BankkontonrUtlandDTO bankkontonrUtland) {
 
-        return nonNull(bankkontonrUtland) && nonNull(bankkontonrUtland.getIban()) ?
-                bankkontonrUtland.getIban() : "";
+        return nonNull(bankkontonrUtland) && isNotBlank(bankkontonrUtland.getIban()) ?
+                bankkontonrUtland.getIban().trim() : "";
+    }
+
+    private static String getBanknavn(KontoDTO konto) {
+
+        return nonNull(konto) && nonNull(konto.getUtenlandskKontoInfo()) && isNotBlank(konto.getUtenlandskKontoInfo().getBanknavn()) ?
+                konto.getUtenlandskKontoInfo().getBanknavn() : "";
     }
 
     private static String getBanknavn(BankkontonrUtlandDTO bankkontonrUtland) {
 
-        return nonNull(bankkontonrUtland) && nonNull(bankkontonrUtland.getBanknavn()) ?
-                bankkontonrUtland.getBanknavn() : "";
+        return nonNull(bankkontonrUtland) && isNotBlank(bankkontonrUtland.getBanknavn()) ?
+                bankkontonrUtland.getBanknavn().trim() : "";
+    }
+
+    private static String getBankkontonrNorge(KontoDTO konto) {
+
+        return nonNull(konto) && isNull(konto.getUtenlandskKontoInfo()) ?
+                konto.getKontonummer() : "";
     }
 
     private static String getBankkontonrNorge(BankkontonrNorskDTO bankkontonrNorsk) {
 
-        return nonNull(bankkontonrNorsk) && nonNull(bankkontonrNorsk.getKontonummer()) ?
-                bankkontonrNorsk.getKontonummer() : "";
+        return nonNull(bankkontonrNorsk) && isNotBlank(bankkontonrNorsk.getKontonummer()) ?
+                bankkontonrNorsk.getKontonummer().replace(".", "") : "";
+    }
+
+    private static String getBankkontonrUtland(KontoDTO konto) {
+
+        return nonNull(konto) && nonNull(konto.getUtenlandskKontoInfo()) ?
+                konto.getKontonummer() : "";
     }
 
     private static String getBankkontonrUtland(BankkontonrUtlandDTO bankkontonrUtland) {
 
-        return nonNull(bankkontonrUtland) && nonNull(bankkontonrUtland.getKontonummer()) ?
-                bankkontonrUtland.getKontonummer() : "";
+        return nonNull(bankkontonrUtland) && isNotBlank(bankkontonrUtland.getKontonummer()) ?
+                bankkontonrUtland.getKontonummer().trim() : "";
     }
 
-    private static String getLandkode(BankkontonrUtlandDTO bankkontonrUtland, Map<String, String> landkoder) {
+    private static String getLandkode(KontoDTO konto) {
 
-        return nonNull(bankkontonrUtland) && nonNull(bankkontonrUtland.getLandkode()) ?
-                String.format(KODEVERK_FMT, bankkontonrUtland.getLandkode(),
-                        landkoder.getOrDefault(bankkontonrUtland.getLandkode(), bankkontonrUtland.getLandkode())) : "";
+        return nonNull(konto) && nonNull(konto.getUtenlandskKontoInfo()) && isNotBlank(konto.getUtenlandskKontoInfo().getBankLandkode()) ?
+                konto.getUtenlandskKontoInfo().getBankLandkode() : "";
     }
 
-    private static String getValuta(BankkontonrUtlandDTO bankkontonrUtland, Map<String, String> valutaer) {
+    private static String getLandkode(BankkontonrUtlandDTO bankkontonrUtland) {
 
-        return nonNull(bankkontonrUtland) && nonNull(bankkontonrUtland.getValuta()) ?
-                String.format(KODEVERK_FMT, bankkontonrUtland.getValuta(),
-                        valutaer.getOrDefault(bankkontonrUtland.getValuta(), bankkontonrUtland.getValuta())) : "";
+        return nonNull(bankkontonrUtland) && isNotBlank(bankkontonrUtland.getLandkode()) ?
+                bankkontonrUtland.getLandkode() : "";
     }
 
-    public Mono<Void> prepareBankkontoSheet(XSSFWorkbook workbook, XSSFCellStyle wrapStyle, List<String> testidenter) {
+    private static String getValuta(KontoDTO konto) {
 
-        var rows = getBankkontoDetaljer(testidenter);
+        return nonNull(konto) && nonNull(konto.getUtenlandskKontoInfo()) && isNotBlank(konto.getUtenlandskKontoInfo().getValutakode()) ?
+                konto.getUtenlandskKontoInfo().getValutakode() : "";
+    }
+
+    private static String getValuta(BankkontonrUtlandDTO bankkontonrUtland) {
+
+        return nonNull(bankkontonrUtland) && isNotBlank(bankkontonrUtland.getValuta()) ?
+                bankkontonrUtland.getValuta() : "";
+    }
+
+    public Mono<Void> prepareBankkontoSheet(XSSFWorkbook workbook, Testgruppe testgruppe) {
+
+        var rows = getBankkontoDetaljer(testgruppe);
 
         if (!rows.isEmpty()) {
-            var sheet = workbook.createSheet(ARK_FANE);
+            var sheet = workbook.createSheet(BANKKONTO_FANE);
 
-            sheet.addIgnoredErrors(new CellRangeAddress(0, rows.size(), 0, header.length),
+            sheet.addIgnoredErrors(new CellRangeAddress(0, rows.size(), 0, BANKKONTO_HEADER.length),
                     IgnoredErrorType.NUMBER_STORED_AS_TEXT);
 
             var columnNo = new AtomicInteger(0);
-            Arrays.stream(COL_WIDTHS)
+            Arrays.stream(BANKKONTO_COL_WIDTHS)
                     .forEach(colWidth -> sheet.setColumnWidth(columnNo.getAndIncrement(), colWidth * 256));
 
-            ExcelService.appendRows(sheet, wrapStyle,
-                    Stream.of(Collections.singletonList(header), rows)
+            ExcelService.appendRows(workbook, BANKKONTO_FANE,
+                    Stream.of(Collections.singletonList(BANKKONTO_HEADER), rows)
                             .flatMap(Collection::stream)
                             .toList());
         }
@@ -132,34 +185,59 @@ public class BankkontoExcelService {
         return Mono.empty();
     }
 
-    private List<Object[]> getBankkontoDetaljer(List<String> identer) {
+    private Mono<List<Object[]>> tpsBankkonto(List<String> identer) {
+        return Flux.range(0, identer.size())
+                .flatMap(index -> tpsMessagingConsumer.getPersoner(List.of(identer.get(index)), List.of("q1")))
+                .filter(PersonMiljoeDTO::isOk)
+                .map(PersonMiljoeDTO::getPerson)
+                .map(person -> unpackBankkonto(person))
+                .collectList();
+    }
 
-        var bankKontoIdenter = identRepository.findByIdentIn(identer)
-                .stream()
-                .map(Testident::getTestgruppe)
-                .map(Testgruppe::getBestillinger)
-                .flatMap(Collection::stream)
+    private Mono<List<Object[]>> kontoregisterBankkonto(List<String> identer) {
+        return Flux.range(0, identer.size())
+                .flatMap(index -> kontoregisterConsumer.sendHentKontoRequest(identer.get(index)))
+                .filter(konto -> konto != null && konto.getAktivKonto() != null)
+                .map(konto -> unpackBankkonto(konto.getAktivKonto()))
+                .collectList();
+    }
+
+    private List<Object[]> getBankkontoDetaljer(Testgruppe testgruppe) {
+
+        var bankKontoIdenter = testgruppe.getBestillinger().stream()
                 .filter(bestilling -> nonNull(bestilling.getBestKriterier()))
                 .filter(bestilling -> bestilling.getBestKriterier().contains("Bankkonto"))
                 .map(Bestilling::getProgresser)
                 .flatMap(Collection::stream)
-                .map(BestillingProgress::getIdent)
-                .distinct()
-                .toList();
+                .collect(Collectors.teeing(
+                        Collectors.filtering(
+                                p -> !p.getBestilling().getSistOppdatert().isAfter(NYTT_KONTOREGISTER_FRA_DATO),
+                                Collectors.toList()
+                        ),
+                        Collectors.filtering(
+                                p -> p.getBestilling().getSistOppdatert().isAfter(NYTT_KONTOREGISTER_FRA_DATO)
+                                        && !p.getKontoregisterStatus().contains("Feil"),
+                                Collectors.toList()
+                        ),
+                        (tps, kontoregister) -> {
+                            var result = new ConcurrentHashMap<String, List<String>>();
+                            result.put("tps", tps.stream().map(BestillingProgress::getIdent).distinct().toList());
+                            result.put("kontoregister", kontoregister.stream().map(BestillingProgress::getIdent).distinct().toList());
+                            return result;
+                        }
+                ));
 
-        return Mono.zip(
-                        kodeverkConsumer.getKodeverkByName(LANDKODER),
-                        kodeverkConsumer.getKodeverkByName(VALUTAER))
-                .flatMapMany(kodeverk -> Flux.range(0, bankKontoIdenter.size())
-                        .flatMap(index -> tpsMessagingConsumer.getPersoner(List.of(bankKontoIdenter.get(index)), List.of("q1")))
-                        .filter(PersonMiljoeDTO::isOk)
-                        .map(PersonMiljoeDTO::getPerson)
-                        .map(person -> unpackBankkonto(person, kodeverk)))
-                .collectList()
-                .block();
+        return List.of(
+                        tpsBankkonto(bankKontoIdenter.get("tps")),
+                        kontoregisterBankkonto(bankKontoIdenter.get("kontoregister"))
+                )
+                .parallelStream()
+                .map(Mono::block)
+                .flatMap(Collection::stream)
+                .toList();
     }
 
-    private Object[] unpackBankkonto(PersonDTO person, Tuple2 kodeverk) {
+    private Object[] unpackBankkonto(PersonDTO person) {
 
         return new Object[]{
                 person.getIdent(),
@@ -167,12 +245,29 @@ public class BankkontoExcelService {
                 getBankkontonrUtland(person.getBankkontonrUtland()),
                 getBanknavn(person.getBankkontonrUtland()),
                 getIban(person.getBankkontonrUtland()),
-                getLandkode(person.getBankkontonrUtland(), (Map<String, String>) kodeverk.getT1()),
-                getValuta(person.getBankkontonrUtland(), (Map<String, String>) kodeverk.getT2()),
+                getLandkode(person.getBankkontonrUtland()),
+                getValuta(person.getBankkontonrUtland()),
                 getSwift(person.getBankkontonrUtland()),
                 getAdresse1(person.getBankkontonrUtland()),
                 getAdresse2(person.getBankkontonrUtland()),
                 getAdresse3(person.getBankkontonrUtland())
+        };
+    }
+
+    private Object[] unpackBankkonto(KontoDTO konto) {
+
+        return new Object[]{
+                konto.getKontohaver(),
+                getBankkontonrNorge(konto),
+                getBankkontonrUtland(konto),
+                getBanknavn(konto),
+                getIban(konto),
+                getLandkode(konto),
+                getValuta(konto),
+                getSwift(konto),
+                getAdresse1(konto),
+                getAdresse2(konto),
+                getAdresse3(konto)
         };
     }
 }
