@@ -4,7 +4,6 @@ import lombok.extern.slf4j.Slf4j;
 
 import java.util.List;
 import java.util.Random;
-import java.util.stream.Collectors;
 
 import no.nav.testnav.libs.dto.helsepersonell.v1.HelsepersonellListeDTO;
 
@@ -17,12 +16,16 @@ public class HelsepersonellListe {
         list = dto.getHelsepersonell()
                 .stream()
                 .map(Helsepersonell::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Helsepersonell getRandomLege() {
         var helsepersonell = list.get(random.nextInt(list.size()));
         log.info("Valgt tilfeldig helsepersonell {}", helsepersonell.getIdent());
         return helsepersonell;
+    }
+
+    public List<Helsepersonell> getList() {
+        return this.list;
     }
 }
